Correct type names
